--- a/email_scraped(ylpss)/static/templates/display.html
+++ b/email_scraped(ylpss)/static/templates/display.html
@@ -7,7 +7,7 @@
 <body>
 
 {% for table in tables %}
-            {{titles[loop.index]}}
+            {{title}}
             {{ table|safe }}
 {% endfor %}
 </body>
